@@ -26,7 +26,6 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <paper.version>1.21.4-R0.1-SNAPSHOT</paper.version>
         <placeholderapi.version>2.11.6</placeholderapi.version>
-        <worldguard.version>7.0.13</worldguard.version>
         <hikaricp.version>6.2.1</hikaricp.version>
         <mariadb.version>3.5.3</mariadb.version>
         <junit.version>5.11.4</junit.version>
@@ -51,18 +50,6 @@
                 <artifactId>placeholderapi</artifactId>
                 <version>${placeholderapi.version}</version>
                 <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <groupId>com.sk89q.worldguard</groupId>
-                <artifactId>worldguard-bukkit</artifactId>
-                <version>${worldguard.version}</version>
-                <scope>provided</scope>
-                <exclusions>
-                    <exclusion>
-                        <groupId>*</groupId>
-                        <artifactId>*</artifactId>
-                    </exclusion>
-                </exclusions>
             </dependency>
             <dependency>
                 <groupId>org.mariadb.jdbc</groupId>
@@ -104,10 +91,6 @@
             <id>placeholderapi</id>
             <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
         </repository>
-        <repository>
-            <id>sk89q-repo</id>
-            <url>https://maven.enginehub.org/repo/</url>
-        </repository>
     </repositories>
 
     <build>
@@ -133,6 +116,8 @@
                     <version>3.5.2</version>
                     <configuration>
                         <useModulePath>false</useModulePath>
+                        <!-- Mockito self-attach 경고 억제: byte-buddy-agent를 javaagent로 명시 -->
+                        <argLine>-XX:+EnableDynamicAgentLoading -Xshare:off</argLine>
                     </configuration>
                 </plugin>
             </plugins>
